Fixing Gallion's elevator

--- a/elevatorGallion.html
+++ b/elevatorGallion.html
@@ -2,7 +2,7 @@
     <head>
 		<script>
 			function goToFloor(floor){
-				parent.window.location = './au34-' + floor + '.json'
+				window.parent.location = 'https://play.workadventu.re/_/global/thierrylee.github.io/workadventure-map/au34-' + floor + '.json#ascGallionSpawn'
 			}
 		</script>
 	</head>
