--- a/index.html
+++ b/index.html
@@ -6,15 +6,35 @@
                 if (path.endsWith('index.html')) {
                     path = path.substr(path, path.length - 'index.html'.length);
                 }
-                var url = 'https://play.workadventu.re/_/global/'+window.location.host+path+'map.json';
-                document.getElementById('mapLink').href = url;
-                document.getElementById('mapLink').innerText = url;
+                var url = 'https://play.workadventu.re/_/global/'+window.location.host+path;
+				
+				// Setup RDC rooms
+				document.getElementById('au34_rdc').href = url + 'au34-rdc.json';
+				var roomsRdc = document.getElementsByClassName('roomRdc');
+				for (i=0; i < roomsRdc.length; i++){
+					roomsRdc[i].href = url + 'au34-rdc.json#' + roomsRdc[i].id;
+				}
+				
+				// Setup 5th rooms
+				document.getElementById('au34_5eme').href = url + 'au34-5eme.json';
+				var rooms5eme = document.getElementsByClassName('room5eme');
+				for (i=0; i < rooms5eme.length; i++){
+					rooms5eme[i].href = url + 'au34-5eme.json#' + rooms5eme[i].id;
+				}
             };
         </script>
     </head>
     <body>
-        This website contains a map for <a href="https://workadventu.re">Workadventu.re</a>.
+        Maps for <a href="https://workadventu.re">Workadventu.re</a>.
         <br/>
-        You can access this map at <a id="mapLink" href=""></a>
+		<ul>
+			<li><a id="au34_rdc" href="">Au 34 - RDC</a></li>
+			<li><a class="roomRdc" id="alanTuringSpawn" href="">Au 34 - RDC - Alan Turing</a></li>
+			<li><a class="roomRdc" id="adaLovelaceSpawn" href="">Au 34 - RDC - Ada Lovelace</a></li>
+			<li><a class="roomRdc" id="blaisePascalSpawn" href="">Au 34 - RDC - Blaise Pascal</a></li>
+			<li><a id="au34_5eme" href="">Au 34 - 5ème</a></li>
+			<li><a class="room5eme" id="georgesBoolSpawn" href="">Au 34 - 5ème - Georges Bool</a></li>
+			<li><a class="room5eme" id="bureauFHISpawn" href="">Au 34 - 5ème - Bureau LCI / FHI</a></li>
+		</ul>
     </body>
 </html>
