Add more spawns points

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 			<li><a class="roomRdc" id="alanTuringSpawn" href="">Au 34 - RDC - Alan Turing</a></li>
 			<li><a class="roomRdc" id="adaLovelaceSpawn" href="">Au 34 - RDC - Ada Lovelace</a></li>
 			<li><a class="roomRdc" id="blaisePascalSpawn" href="">Au 34 - RDC - Blaise Pascal</a></li>
+			<li><a class="roomRdc" id="graceHopperSpawn" href="">Au 34 - RDC - Grace Hopper</a></li>
+			<li><a class="roomRdc" id="cafetRdcSpawn" href="">Au 34 - RDC - Cafetaria</a></li>
 			<li><a id="au34_5eme" href="">Au 34 - 5ème</a></li>
 			<li><a class="room5eme" id="georgesBoolSpawn" href="">Au 34 - 5ème - Georges Bool</a></li>
 			<li><a class="room5eme" id="bureauFHISpawn" href="">Au 34 - 5ème - Bureau LCI / FHI</a></li>
