Remove temporary Haxball page and fix link from index

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<li><a id="au34_5eme" href="">Au 34 - 5ème</a></li>
 			<li><a class="room5eme" id="georgesBoolSpawn" href="">Au 34 - 5ème - Georges Bool</a></li>
 			<li><a class="room5eme" id="bureauFHISpawn" href="">Au 34 - 5ème - Bureau LCI / FHI</a></li>
-			<li><a class="room6eme" id="" href="">Au 34 - 6ème</a></li>
+			<li><a id="au34_6eme" href="">Au 34 - 6ème</a></li>
 		</ul>
     </body>
 </html>
