--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
 			<li><a class="room5eme" id="georgesBoolSpawn" href="">Au 34 - 5ème - Georges Bool</a></li>
 			<li><a class="room5eme" id="bureauFHISpawn" href="">Au 34 - 5ème - Bureau LCI / FHI</a></li>
 			<li><a id="au34_6eme" href="">Au 34 - 6ème</a></li>
+			<li><a class="room6eme" id="espaceCuisine" href="">Au 34 - 6ème - Cuisine</a></li>
+			<li><a class="room6eme" id="espaceTerrasse" href="">Au 34 - 6ème - Terrasse</a></li>
+			<li><a class="room6eme" id="espaceBaby" href="">Au 34 - 6ème - Espace Baby</a></li>
+			<li><a class="room6eme" id="espaceBar" href="">Au 34 - 6ème - Espace Bar</a></li>
 		</ul>
     </body>
 </html>
